--- a/resources/sass/postcard.scss
+++ b/resources/sass/postcard.scss
@@ -77,7 +77,12 @@
                 font-size: 14px;
                 text-align: left;
                 margin-bottom: 5px;
+                img{
+                    max-width: 100%;
+                    height: auto;
+                }    
             }
+           
         }
        
     }
