--- a/resources/sass/postcard.scss
+++ b/resources/sass/postcard.scss
@@ -72,11 +72,20 @@
         }
         .content{
             padding: 12px 24px;
+           
+            a{
+                text-decoration: none;
+                &:hover{
+                    text-decoration: none;
+                }
+            }
+            
             p{
                 line-height: 20px;
                 font-size: 14px;
                 text-align: left;
                 margin-bottom: 5px;
+                
                 img{
                     max-width: 100%;
                     height: auto;
