--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);@import url(https://fonts.googleapis.com/css?family=Roboto&display=swap);/*!
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Open+Sans&display=swap);@import url(https://fonts.googleapis.com/css?family=Roboto&display=swap);@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;
+
+400;500;600;700;800;900&display=swap);/*!
  * 
  * antd v4.0.4
  * 
@@ -27114,13 +27116,6 @@ div.ant-typography-edit-content.ant-typography-rtl {
   padding: 0;
 }@charset "UTF-8";
 
-/*!
- * Bootstrap v4.4.1 (https://getbootstrap.com/)
- * Copyright 2011-2019 The Bootstrap Authors
- * Copyright 2011-2019 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
- */
-
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
@@ -37994,5 +37989,10 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+.mce-notifications,
+.tox-notifications-container {
+  display: none !important;
 }
 
