--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 
 // Variables
 @import 'variables';
@@ -10,3 +12,6 @@
 @import '~antd/dist/antd.css';
 @import '~bootstrap/scss/bootstrap';
 
+.mce-notifications,.tox-notifications-container{
+    display:none !important;
+}
