--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -7,8 +7,8 @@
     display:flex;
     flex-direction: row;
     align-items: center;
-    background-color: white;
-    border-bottom: 1px solid lavender;
+    background-color: #363B4A;
+    // border-bottom: 1px solid lavender;
 .nav-icon{
     display:flex;
     flex-direction: column;
@@ -19,20 +19,28 @@
         margin:2px;
         content:"";
         width: 25px;
-        height:2px;
-        background-color: darkslategray;
+        height:3px;
+        border-radius: 15px;
+        background-color: white;
     }
+    div{
+        width: 18px;
+        &:hover{
+            background-color: #FF5353;
+        }
+    }
+    
 }
 
 .brand{
     font-size: large;
     font-weight: 500;
-    color: darkslategray;
+    color: white;
     text-decoration: none;
     letter-spacing: .00625em;
 }
 .brand:hover{
-    color: darkslategray;
+    color: #FF5353;
     text-decoration: none;
 }
 .plus{
@@ -41,7 +49,7 @@
 a:nth-of-type(n+3){
     display: block;
     float: right;
-    color: #5c96f6;
+    color: #E5E2E2;
     text-align: center;
     padding: 0px 30px;
     font-variant: normal;
@@ -49,12 +57,13 @@ a:nth-of-type(n+3){
     font-size: 14px;
     text-align: center;
     font-weight: 500;
-    font-family: open sans;
+    font-family: Poppins;
     letter-spacing:0.25px;
     
 }
 a:nth-of-type(3){
     margin-left: auto;
+    color: #FF5353;
 }
 
 .avatar{
@@ -77,7 +86,6 @@ a:nth-of-type(3){
     input{
         width: 220px;
         padding: 2px 15px;
-        border: 1px solid gainsboro;
         line-height: 30px;
     }
 
