--- a/resources/sass/landing.scss
+++ b/resources/sass/landing.scss
@@ -1,8 +1,13 @@
 body{
-    background-color: white;
+    background-color: #2E3341;
+    color: white;
+    font-family: Poppins;
 }
 .landing{
     text-align: center;
     padding: 15px 5%;
     padding-top: 40px;
+    h1,h3,h4,h2{
+        color: white;
+    }
 }
