--- a/resources/sass/singleClassPage.scss
+++ b/resources/sass/singleClassPage.scss
@@ -11,7 +11,7 @@
         a{
             
             p{
-                color: darkslateblue;
+                color: white;
                 font-weight: bold;
                 padding-left: 10px;
                 padding-right: 10px;
@@ -21,10 +21,13 @@
             &:hover{
                 text-decoration:none ;
             }
+          span{
+              color: white;
+          }
         }
         .activeSection{
-            color: cornflowerblue;
-            border-bottom: medium solid dodgerblue;
+            color: #FF5353;
+            border-bottom: medium solid #FF5353;
         }
         
     }
@@ -44,10 +47,12 @@
         flex-direction: column;
         z-index: 2;
         transition: all 0.4s ease-in-out;
+        box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.16);
         .title{
             padding: 24px;
             h1{
                 color: white;
+              
             }
             p{
                 color: white;
@@ -88,13 +93,14 @@
         margin: auto;
         position: relative;
         z-index:1;
-        border: 1px solid gainsboro;
+        // border: 1px solid gainsboro;
         transition: all 0.4s ease-in-out;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
-        // transform: translateY(-100%);
+        background-color: #3F4355;
         p{
             margin-bottom: 0px;
+            color: white;
         }
     }
     .divRow{
@@ -137,6 +143,11 @@
         margin-top:0px !important;
         flex-direction: column;
         flex-flow: wrap;
+        .title{
+            h1{
+                font-size: 24px;
+            }
+        }
     }
  .divRow{
     aside,.todoAside{
