--- a/resources/sass/singlePostPage.scss
+++ b/resources/sass/singlePostPage.scss
@@ -4,14 +4,15 @@
     width: 70%;
     max-width: 100%;
     margin: auto;
+    
     .post{
-
+        background-color: #3F4355 !important; 
+        box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.16);
         .info{
             min-height: 100px;
             width: 100%;
             border-radius: 10px;
             border-bottom: 1px solid #dadce0;
-            // border-bottom: 1px solid royalblue;
             display:flex;
             flex-direction: column;
             .profile{
