--- a/resources/sass/todoAside.scss
+++ b/resources/sass/todoAside.scss
@@ -3,18 +3,20 @@
     flex-direction: column;
     flex: 3;
     height:200px;
-    border-radius: 10px;
-    border: 1px solid lavender;
+    border-radius: 35px;
+    background-color: #3F4355;
+    box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.16);
     h5{
         margin: auto;
         margin-top: 20px;
         margin-bottom: 0px;
+        color: white;
     }
     hr{
         width: 80%;
-        height: 2px;
+        height: 1px;
         margin-top: 10px;
-        color: gainsboro;
+        color: #FF5353;
     }
     p{
         font-size: 15px;
